fixed titles and stars alignment

--- a/styles/resourcesWall.scss
+++ b/styles/resourcesWall.scss
@@ -28,6 +28,11 @@ display: flex;
 justify-content: space-between;
 }
 
+.resName{
+  width: 167px;
+  white-space: wrap;
+}
+
 .rating{
 float: right;
 vertical-align: top;
